nvim: update keybind setup and assign which-key to manage them

--- a/nvim/Makefile
+++ b/nvim/Makefile
@@ -12,8 +12,7 @@ config.nvim:
 		break
 	done
 	$(H)echo "let g:editor_theme = 'material'" >> ${CONFIG_DIR}/config.vim
-	$(H)nvim +"nnoremap q <cmd>qa!<cr>" \
-			+"set nomodifiable nomodified" \
+	$(H)nvim +"set nomodifiable nomodified" \
 			<<< "Press 'q' to exit nvim if all plugins were installed."
 
 install.nvim:
