tmux: add easymotion back and use bd-f as default motion

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -154,6 +154,15 @@ set -g @fuzzback-popup        0
 set -g @fuzzback-hide-preview 1
 set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 
+set -g @plugin 'IngoMeyer441/tmux-easy-motion'
+set -g @easy-motion-prefix "f"
+set -g @easy-motion-target-keys "fjdkslghrua;eiwoqptyvncm"
+set -g @easy-motion-default-motion "bd-f"
+set -g @easy-motion-dim-style "fg=colour242"
+set -g @easy-motion-highlight-style "fg=colour196,bold"
+set -g @easy-motion-highlight-2-first-style "fg=brightyellow,bold"
+set -g @easy-motion-highlight-2-second-style "fg=yellow,bold"
+
 ## Themes
 # Dracula: https://draculatheme.com/tmux
 # Dracula Core:
