tmux: add legacy search history keybind back

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,10 +109,12 @@ bind p paste-buffer
 # 		"tmux new -n plugin ${tmux_tool}/main-menu.bash ';' \
 # 		set status off"
 bind o run "${tmux_tool}/debug-console.bash"
-bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
+bind h list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind , new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind \; new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
-bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-history
+bind C confirm-before -p "Do you want to clear history? (y/n)" clear-history
+bind ? copy-mode ';' send-key ?
+bind / copy-mode ';' send-key /
 
 ## Plugins
 bind ] popup -EE -T " Plugin Menu " \
