tmux: update keybind
1. Previous window
2. Switch panes
3. Enter key function
4. Enter Copy mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,6 +71,7 @@ bind r move-window -r ';' select-layout -E	# sort the windows
 bind w choose-tree -w -f '#{m:#{session_attached},1}'
 bind a last-window
 bind -r Tab select-window -n
+bind -r BTab select-window -p
 
 bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
 
@@ -88,11 +89,10 @@ unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x 
 unbind o
-bind -r n display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
+bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
 
 # Copy-mode:
 unbind [
-bind b copy-mode
 bind v copy-mode \; send-keys v
 bind V copy-mode \; send-keys V
 bind 'C-v' copy-mode \; send-keys C-v
@@ -100,6 +100,9 @@ bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi '~' send -X cancel ';' send-keys '~'
+bind -T copy-mode-vi Enter send -X cancel ';' send-keys '~'
+bind-key -T copy-mode-vi Enter send-keys -X select-word
 
 unbind ]
 bind p paste-buffer
@@ -115,6 +118,7 @@ bind \; new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
 bind C confirm-before -p "Do you want to clear history? (y/n)" clear-history
 bind ? copy-mode ';' send-key ?
 bind / copy-mode ';' send-key /
+bind -n '~' copy-mode
 
 ## Plugins
 bind ] popup -EE -T " Plugin Menu " \
