tmux: update tmux keybinds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,16 +93,15 @@ bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -
 
 # Copy-mode:
 unbind [
-bind v copy-mode \; send-keys v
-bind V copy-mode \; send-keys V
-bind 'C-v' copy-mode \; send-keys C-v
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
-bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi '~' send -X cancel ';' send-keys '~'
-bind -T copy-mode-vi Enter send -X cancel ';' send-keys '~'
-bind-key -T copy-mode-vi Enter send-keys -X select-word
+bind v     copy-mode \; send v
+bind V     copy-mode \; send V
+bind 'C-v' copy-mode \; send C-v
+bind -T copy-mode-vi 'v'    send -X begin-selection
+bind -T copy-mode-vi 'C-v'  send -X rectangle-toggle ';' send -X begin-selection
+bind -T copy-mode-vi 'y'    send -X copy-selection-and-cancel
+bind -T copy-mode-vi '~'    send -X cancel ';' send '~'
+bind -T copy-mode-vi Enter  send -X select-word
+bind -T copy-mode-vi Space  send -X clear-selection
 
 unbind ]
 bind p paste-buffer
@@ -111,13 +110,13 @@ bind p paste-buffer
 # bind [ popup -E -T " Main Menu " \
 # 		"tmux new -n plugin ${tmux_tool}/main-menu.bash ';' \
 # 		set status off"
-bind o run "${tmux_tool}/debug-console.bash"
-bind h list-keys -T prefix ';' list-keys -T copy-mode-vi
-bind , new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
+bind o  run "${tmux_tool}/debug-console.bash"
+bind h  list-keys -T prefix ';' list-keys -T copy-mode-vi
+bind ,  new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind \; new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
-bind C confirm-before -p "Do you want to clear history? (y/n)" clear-history
-bind ? copy-mode ';' send-key ?
-bind / copy-mode ';' send-key /
+bind C  confirm-before -p "Do you want to clear history? (y/n)" clear-history
+bind ?  copy-mode ';' send ?
+bind /  copy-mode ';' send /
 bind -n '~' copy-mode
 
 ## Plugins
