tmux: update config with more keybinds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,7 +42,6 @@ set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
-bind ` send-prefix			# press '`' twice => '`'
 
 # Layout:
 # - unidirectional switch to next layout
@@ -83,7 +82,7 @@ unbind Up		# Change to the pane above of the current pane.
 unbind Down		# Change to the pane below of the current pane.
 unbind Left		# Change to the pane left of the current pane.
 unbind Right	# Change to the pane right of the current pane.
-unbind \"
+unbind '"'
 bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
@@ -93,15 +92,15 @@ bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -
 
 # Copy-mode:
 unbind [
-bind v     copy-mode \; send v
-bind V     copy-mode \; send V
-bind 'C-v' copy-mode \; send C-v
-bind -T copy-mode-vi 'v'    send -X begin-selection
-bind -T copy-mode-vi 'C-v'  send -X rectangle-toggle ';' send -X begin-selection
-bind -T copy-mode-vi 'y'    send -X copy-selection-and-cancel
-bind -T copy-mode-vi '~'    send -X cancel ';' send '~'
-bind -T copy-mode-vi Enter  send -X select-word
-bind -T copy-mode-vi Space  send -X clear-selection
+bind v     copy-mode ';' send v
+bind V     copy-mode ';' send V
+bind 'C-v' copy-mode ';' send C-v
+bind -T    copy-mode-vi 'v'   send -X begin-selection
+bind -T    copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
+bind -T    copy-mode-vi 'y'   send -X copy-selection-and-cancel
+bind -T    copy-mode-vi Enter send -X select-word
+bind -T    copy-mode-vi Space send -X clear-selection
+bind -T    copy-mode-vi p send -X cancel ';' send-prefix
 
 unbind ]
 bind p paste-buffer
@@ -110,14 +109,14 @@ bind p paste-buffer
 # bind [ popup -E -T " Main Menu " \
 # 		"tmux new -n plugin ${tmux_tool}/main-menu.bash ';' \
 # 		set status off"
-bind o  run "${tmux_tool}/debug-console.bash"
-bind h  list-keys -T prefix ';' list-keys -T copy-mode-vi
-bind ,  new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
-bind \; new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
-bind C  confirm-before -p "Do you want to clear history? (y/n)" clear-history
-bind ?  copy-mode ';' send ?
-bind /  copy-mode ';' send /
-bind -n '~' copy-mode
+bind o   run "${tmux_tool}/debug-console.bash"
+bind h   list-keys -T prefix ';' list-keys -T copy-mode-vi
+bind ,   new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
+bind ';' new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
+bind C   confirm-before -p "Do you want to clear history? (y/n)" clear-history
+bind ?   copy-mode ';' send ?
+bind /   copy-mode ';' send /
+bind `   copy-mode
 
 ## Plugins
 bind ] popup -EE -T " Plugin Menu " \
