--- a/tig/config
+++ b/tig/config
@@ -152,29 +152,29 @@ bind status  p<Enter> @sh -c 'git stash pop stash@{0}'
 
 ## Add/Remove/Move tag and branch
 bind main   ta       @git tag "%(prompt new tag: )" %(commit)
-bind main   t<ENTER> @sh -c 'git tag "tag.$(git rev-parse --short %(commit)" %(commit)'
+bind main   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
 bind main   ba       @git branch "%(prompt new branch: )" %(commit)
-bind main   b<ENTER> @sh -c 'git branch "branch.$(basename $(git rev-parse --show-toplevel))" %(commit)'
-bind main   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch "$(cat $b)" %(commit); elif [ -f $t ]; then git tag "$(cat $t)" %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind main   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D "%(branch)"; echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
+bind main   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind main   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
+bind main   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo %(tag) > /tmp/tig.tag; fi'
 bind reflog ta       @git tag "%(prompt new tag: )" %(commit)
-bind reflog t<ENTER> @sh -c 'git tag "tag.$(git rev-parse --short %(commit)" %(commit)'
+bind reflog t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
 bind reflog ba       @git branch "%(prompt new branch: )" %(commit)
-bind reflog b<ENTER> @sh -c 'git branch "branch.$(basename $(git rev-parse --show-toplevel))" %(commit)'
-bind reflog a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch "$(cat $b)" %(commit); elif [ -f $t ]; then git tag "$(cat $t)" %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind reflog d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D "%(branch)"; echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
+bind reflog b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind reflog a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
+bind reflog d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
 bind diff   ta       @git tag "%(prompt new tag: )" %(commit)
-bind diff   t<ENTER> @sh -c 'git tag "tag.$(git rev-parse --short %(commit)" %(commit)'
+bind diff   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
 bind diff   ba       @git branch "%(prompt new branch: )" %(commit)
-bind diff   b<ENTER> @sh -c 'git branch "branch.$(basename $(git rev-parse --show-toplevel))" %(commit)'
-bind diff   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch "$(cat $b)" %(commit); elif [ -f $t ]; then git tag "$(cat $t)" %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind diff   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D "%(branch)"; echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
+bind diff   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind diff   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
+bind diff   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
 bind refs   ta       @git tag "%(prompt new tag: )" HEAD
-bind refs   t<ENTER> @sh -c 'git tag "tag.$(git rev-parse --short HEAD" HEAD'
+bind refs   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short HEAD) HEAD'
 bind refs   ba       @git branch "%(prompt new branch: )" HEAD
-bind refs   b<ENTER> @sh -c 'git branch "branch.$(basename $(git rev-parse --show-toplevel))" HEAD'
-bind refs   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch "$(cat $b)" HEAD; elif [ -f $t ]; then git tag "$(cat $t)" HEAD; else echo "no assigned tag or branch"; fi; rm $t $b'
-bind refs   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D "%(branch)"; echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
+bind refs   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) HEAD'
+bind refs   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) HEAD; elif [ -f $t ]; then git tag $(cat $t) HEAD; else echo "no assigned tag or branch"; fi; rm $t $b'
+bind refs   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
 
 ## Checkout
 bind main   co @git checkout %(commit)
