tmux: update tmux keybinds
- Remove command alias for spliting windows
- Change some behaviour for copy mode
- Limit the length of window name
- Switch to the last window (-r)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,8 +38,8 @@ setw -g bell-action other	# only other, not current window, triggers bell
 setw -g mode-keys vi
 
 # Add alias for split-window
-set -s command-alias[10] vs='split-window -h'
-set -s command-alias[11] hs='split-window -v'
+# set -s command-alias[10] vs='split-window -h'
+# set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
 
@@ -68,7 +68,7 @@ unbind &
 bind k confirm-before -p "Do you really want to kill this window? (y/n)" kill-window
 bind r move-window -r ';' select-layout -E	# sort the windows
 bind w choose-tree -w -f '#{m:#{session_attached},1}'
-bind a last-window
+bind -r a last-window
 bind -r Tab select-window -n
 bind -r BTab select-window -p
 
@@ -98,9 +98,10 @@ bind 'C-v' copy-mode ';' send C-v
 bind -T    copy-mode-vi 'v'   send -X begin-selection
 bind -T    copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
 bind -T    copy-mode-vi 'y'   send -X copy-selection-and-cancel
-bind -T    copy-mode-vi Enter send -X select-word
-bind -T    copy-mode-vi Space send -X clear-selection
 bind -T    copy-mode-vi p send -X cancel ';' send-prefix
+bind -T  copy-mode-vi C-c   send -X clear-selection
+bind -T  copy-mode-vi q     send -X cancel
+bind -T  copy-mode-vi Enter send -X clear-selection ';' send -X select-word
 
 unbind ]
 bind p paste-buffer
@@ -138,8 +139,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'     # Make tmux more sensible
 # Kill process with 'prefix + *'
 set -g @plugin 'tmux-plugins/tmux-cowboy'		# Kill no-response process in current pane
-set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outside tmux
+
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
+set -g @tmux_window_name_max_name_len 15
+
+ # Copied text could be used outside tmux
+set -g @plugin      'tmux-plugins/tmux-yank'
+set -g @yank_action 'copy-pipe'
 
 TMUX_FZF_LAUNCH_KEY='['
 TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
