--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,22 +20,21 @@ set -g prefix `	# set ` as prefix key
 
 # solve colorized issue in tmux
 # For nvim :checkhealth setting
-set -g default-terminal "xterm-256color"
+set -g  default-terminal   "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 # set -g default-terminal "screen-255color"
 # set -g default-terminal "tmux-256color"
 
-set -g base-index 1			# set window index to 1
-set -g pane-base-index 1	# set pane index to 1
-set -g history-limit 20000	# scroll history size
-setw -g mode-keys vi		# set copy-mode to vi style
-setw -g automatic-rename	# rename window automately
-set -sg escape-time 0		# no waiting time
-set -g focus-events on		# Used for vim-tmux-clipboard
-setw -g monitor-bell on		# monitor bell in the window
-setw -g visual-bell on		# show visual alert when task complete
-setw -g bell-action other	# only other, not current window, triggers bell
-setw -g mode-keys vi
+setw -g  automatic-rename       # rename window automately
+setw -g  mode-keys        vi    # set copy-mode to vi style
+set  -g  base-index       1     # set window index to 1
+set  -g  pane-base-index  1     # set pane index to 1
+set  -g  history-limit    20000 # scroll history size
+set  -sg escape-time      0     # no waiting time
+set  -g  focus-events     on    # Used for vim-tmux-clipboard
+setw -g  monitor-bell     on    # monitor bell in the window
+setw -g  visual-bell      on    # show visual alert when task complete
+setw -g  bell-action      other # only other, not current window, triggers bell
 
 # Add alias for split-window
 # set -s command-alias[10] vs='split-window -h'
@@ -86,22 +85,24 @@ unbind '"'
 bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
-bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x 
+bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x
 unbind o
 bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
 
 # Copy-mode:
 unbind [
-bind v     copy-mode ';' send v
-bind V     copy-mode ';' send V
-bind 'C-v' copy-mode ';' send C-v
-bind -T    copy-mode-vi 'v'   send -X begin-selection
-bind -T    copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
-bind -T    copy-mode-vi 'y'   send -X copy-selection-and-cancel
-bind -T    copy-mode-vi p send -X cancel ';' send-prefix
+bind `   copy-mode
+bind ?   copy-mode ';' send ?
+bind /   copy-mode ';' send /
+bind v   copy-mode ';' send v
+bind V   copy-mode ';' send V
+bind C-v copy-mode ';' send C-v
+bind -T  copy-mode-vi v     send -X begin-selection
 bind -T  copy-mode-vi C-c   send -X clear-selection
 bind -T  copy-mode-vi q     send -X cancel
+bind -T  copy-mode-vi p     send -X cancel          ';' send-prefix
 bind -T  copy-mode-vi Enter send -X clear-selection ';' send -X select-word
+bind -T  copy-mode-vi C-v   send -X rectangle-on    ';' send -X begin-selection
 
 unbind ]
 bind p paste-buffer
@@ -115,9 +116,6 @@ bind h   list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind ,   new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind ';' new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
 bind C   confirm-before -p "Do you want to clear history? (y/n)" clear-history
-bind ?   copy-mode ';' send ?
-bind /   copy-mode ';' send /
-bind `   copy-mode
 
 ## Plugins
 bind ] popup -EE -T " Plugin Menu " \
@@ -151,10 +149,10 @@ TMUX_FZF_LAUNCH_KEY='['
 TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
 set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g @plugin                'laktak/extrakto'
-set -g @extrakto_key          "\'"
-set -g @extrakto_grab_area    recent
-set -g @extrakto_popup_size   '60%'
+set -g @plugin                          'laktak/extrakto'
+set -g @extrakto_key                    "\'"
+set -g @extrakto_grab_area              recent
+set -g @extrakto_popup_size             '60%'
 set -g @extrakto_split_direction        'p'
 set -g @extrakto_fzf_unset_default_opts "false"
 
@@ -164,34 +162,30 @@ set -g @fuzzback-popup        0
 set -g @fuzzback-hide-preview 1
 set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 
-set -g @plugin 'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix "f"
-set -g @easy-motion-target-keys "fjdkslghrua;eiwoqptyvncm"
-set -g @easy-motion-default-motion "bd-f"
-set -g @easy-motion-dim-style "fg=colour242"
-set -g @easy-motion-highlight-style "fg=colour196,bold"
-set -g @easy-motion-highlight-2-first-style "fg=brightyellow,bold"
+set -g @plugin                               'IngoMeyer441/tmux-easy-motion'
+set -g @easy-motion-prefix                   "f"
+set -g @easy-motion-target-keys              "fjdkslghrua;eiwoqptyvncm"
+set -g @easy-motion-default-motion           "bd-f"
+set -g @easy-motion-dim-style                "fg=colour242"
+set -g @easy-motion-highlight-style          "fg=colour196,bold"
+set -g @easy-motion-highlight-2-first-style  "fg=brightyellow,bold"
 set -g @easy-motion-highlight-2-second-style "fg=yellow,bold"
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
 # Dracula Core:
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-left-icon session
+set -g @plugin                     'dracula/tmux'
+set -g @dracula-show-left-icon     session
 set -g @dracula-show-empty-plugins true
-set -g @dracula-refresh-rate 1
-# Flag meaning:
-# '*': current pane
-# '-': previous window
-# '!': bell
-set -g @dracula-show-flags true
+set -g @dracula-refresh-rate       1
+set -g @dracula-show-flags         true # '*':current pane, '-': previous window, '!': bell
 
 # Dracula Plugins:
 #   battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage,
 #   network, network-bandwidth, network-ping, ssh-session,
 #   attached-clients, network-vpn, weather, time, mpc, spotify-tui,
 #   kubernetes-context, synchronize-panes
-set -g @dracula-plugins "tmux-ram-usage ram-usage cpu-usage"
+set -g @dracula-plugins              "tmux-ram-usage ram-usage cpu-usage"
 set -g @dracula-tmux-ram-usage-label "TMUX"
 
 # Dracula Colorschemes:
