--- a/tig/config
+++ b/tig/config
@@ -47,6 +47,8 @@ bind generic b none
 bind generic o none
 bind generic w none
 bind generic t none
+bind generic / none
+bind generic <Ctrl-C> none
 # }
 
 # Views {
@@ -59,7 +61,7 @@ bind generic 2  view-refs
 bind generic 3  view-stash
 bind generic B  view-blame
 bind generic T  view-tree
-bind generic \  view-grep
+bind generic /g view-grep
 bind generic H  view-help
 
 bind stage   1  none
@@ -105,6 +107,7 @@ bind generic or :toggle commit-title-refs
 
 # Misc {
 ## Move light bar to top/button
+bind generic // search
 bind generic g  none
 bind generic gg move-first-line
 bind generic G  move-last-line
@@ -116,10 +119,23 @@ bind generic q  view-close-no-quit
 bind generic J  next
 bind generic K  previous
 bind generic Q  quit
-bind generic <Ctrl-C> none
+bind generic <Ctrl-r> <tig
 
 bind generic ;  +git rev-parse --show-toplevel
+
+bind generic yy +sh -c 'tig.cmd copy %(commit)'
+bind generic yf +sh -c 'tig.cmd copy %(file)'
+bind generic /a >!tig --no-merges --author="%(prompt search author name: )"
+bind generic /f >!tig -- "%(file)"
 # }
+
+# TODO:
+# c: commit
+# s: stash
+# b: branch
+# t: tag
+# p: patch / push / pull / fetch
+# r: rebase / merge
 
 # Feature {
 ## Commit
@@ -135,83 +151,92 @@ bind status  ca       >?git commit -v --amend
 bind status  cn       @?git commit --amend --no-edit
 
 ## Stage/Unstage file
-bind stage   f<Enter> @sh -c 'if git diff --cached --quiet %(file); then git add %(file); else git reset --quiet HEAD %(file); fi'
-bind stage   fa       @sh -c 'if git diff --cached --quiet; then git add -u; else git reset --quiet HEAD; fi'
+bind stage   f<Enter> @sh -c 'tig.cmd stage_file "%(file)"'
+bind stage   fa       @sh -c 'tig.cmd stage_file'
 
 ## Add stash
-bind generic y        none
-bind main    ya       @git stash save "%(prompt new stash: )"
-bind main    y<Enter> @sh -c 'git stash save "$(basename $(git rev-parse --show-toplevel)).$(git rev-parse --short HEAD)"'
-bind main    p<Enter> @sh -c 'git stash pop stash@{0}'
-bind stage   ya       @git stash save "%(prompt new stash: )"
-bind stage   y<Enter> @sh -c 'git stash save "$(basename $(git rev-parse --show-toplevel)).$(git rev-parse --short HEAD)"'
-bind stage   p<Enter> @sh -c 'git stash pop stash@{0}'
-bind status  ya       @git stash save "%(prompt new stash: )"
-bind status  y<Enter> @sh -c 'git stash save "$(basename $(git rev-parse --show-toplevel)).$(git rev-parse --short HEAD)"'
-bind status  p<Enter> @sh -c 'git stash pop stash@{0}'
+bind main    sa       @git stash save "%(prompt new stash: )"
+bind main    s<Enter> @sh -c 'tig.cmd stash'
+bind main    sp       @sh -c 'tig.cmd cmd stash pop stash@{0}'
+bind stage   sa       @git stash save "%(prompt new stash: )"
+bind stage   s<Enter> @sh -c 'tig.cmd stash'
+bind stage   sp       @sh -c 'tig.cmd cmd stash pop stash@{0}'
+bind status  sa       @git stash save "%(prompt new stash: )"
+bind status  s<Enter> +sh -c 'tig.cmd stash'
+bind status  sp       +sh -c 'tig.cmd cmd stash pop stash@{0}'
 
 ## Add/Remove/Move tag and branch
-bind main   ta       @git tag "%(prompt new tag: )" %(commit)
-bind main   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind main   ba       @git branch "%(prompt new branch: )" %(commit)
-bind main   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind main   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind main   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo %(tag) > /tmp/tig.tag; fi'
-bind reflog ta       @git tag "%(prompt new tag: )" %(commit)
-bind reflog t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind reflog ba       @git branch "%(prompt new branch: )" %(commit)
-bind reflog b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind reflog a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind reflog d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
-bind diff   ta       @git tag "%(prompt new tag: )" %(commit)
-bind diff   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind diff   ba       @git branch "%(prompt new branch: )" %(commit)
-bind diff   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind diff   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) %(commit); elif [ -f $t ]; then git tag $(cat $t) %(commit); else echo "no assigned tag or branch"; fi; rm $t $b'
-bind diff   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
-bind refs   ta       @git tag "%(prompt new tag: )" HEAD
-bind refs   t<ENTER> @sh -c 'git tag tag.$(git rev-parse --short HEAD) HEAD'
-bind refs   ba       @git branch "%(prompt new branch: )" HEAD
-bind refs   b<ENTER> @sh -c 'git branch branch.$(basename $(git rev-parse --show-toplevel)) HEAD'
-bind refs   a<ENTER> @sh -c 't=/tmp/tig.tag; b=/tmp/tig.branch; if [ -f $b ]; then git branch $(cat $b) HEAD; elif [ -f $t ]; then git tag $(cat $t) HEAD; else echo "no assigned tag or branch"; fi; rm $t $b'
-bind refs   d<ENTER> @sh -c 'if [ -z "%(tag)" ]; then git branch -D %(branch); echo "%(branch)" > /tmp/tig.branch; else git tag -d %(tag); echo "%(tag)" > /tmp/tig.tag; fi'
+bind main   ta       @sh -c 'tig.cmd cmd tag "%(prompt new tag: )" %(commit)'
+bind main   t<ENTER> @sh -c 'tig.cmd cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
+bind main   ba       @sh -c 'tig.cmd cmd branch "%(prompt new branch: )" %(commit)'
+bind main   b<ENTER> @sh -c 'tig.cmd cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind main   a<ENTER> @sh -c 'tig.cmd add "%(commit)"'
+bind main   d<ENTER> @sh -c 'tig.cmd del "%(commit)"'
+bind reflog ta       @sh -c 'tig.cmd cmd tag "%(prompt new tag: )" %(commit)'
+bind reflog t<ENTER> @sh -c 'tig.cmd cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
+bind reflog ba       @sh -c 'tig.cmd cmd branch "%(prompt new branch: )" %(commit)'
+bind reflog b<ENTER> @sh -c 'tig.cmd cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind reflog a<ENTER> @sh -c 'tig.cmd add "%(commit)"'
+bind reflog d<ENTER> @sh -c 'tig.cmd del "%(commit)"'
+bind diff   ta       @sh -c 'tig.cmd cmd tag "%(prompt new tag: )" %(commit)'
+bind diff   t<ENTER> @sh -c 'tig.cmd cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
+bind diff   ba       @sh -c 'tig.cmd cmd branch "%(prompt new branch: )" %(commit)'
+bind diff   b<ENTER> @sh -c 'tig.cmd cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
+bind diff   a<ENTER> @sh -c 'tig.cmd add "%(commit)"'
+bind diff   d<ENTER> @sh -c 'tig.cmd del "%(commit)"'
+bind refs   ta       @sh -c 'tig.cmd cmd tag "%(prompt new tag: )" HEAD'
+bind refs   t<ENTER> @sh -c 'tig.cmd cmd tag tag.$(git rev-parse --short HEAD) HEAD'
+bind refs   ba       @sh -c 'tig.cmd cmd branch "%(prompt new branch: )" HEAD'
+bind refs   b<ENTER> @sh -c 'tig.cmd cmd branch branch.$(basename $(git rev-parse --show-toplevel)) HEAD'
+bind refs   a<ENTER> @sh -c 'tig.cmd add "%(commit)"'
+bind refs   d<ENTER> @sh -c 'tig.cmd del "%(commit)"'
 
 ## Checkout
-bind main   co @git checkout %(commit)
-bind refs   co @git checkout %(ref)
-bind refs   cd @git checkout -d %(ref)
-bind reflog co @git checkout %(commit)
+bind main   co +sh -c 'git checkout %(commit)'
+bind refs   co +sh -c 'git checkout %(ref)'
+bind refs   cd +sh -c 'git checkout -d %(ref)'
+bind reflog co +sh -c 'git checkout %(commit)'
 
 ### Reset file
 bind status co @?git checkout %(file)
 bind stage  co @?git checkout %(file)
 
 ## Reset commits
-bind generic r  none
-bind main    rh @?git reset --hard %(commit)
-bind reflog  rh @?git reset --hard %(commit)
-bind diff    rh @?git reset --hard %(commit)
-bind main    rs @?git reset %(commit)
-bind reflog  rs @?git reset %(commit)
-bind diff    rs @?git reset %(commit)
-bind stage   rn @?git reset --hard HEAD
-bind main    rn @?git reset --hard HEAD
-bind main    rp @?git reset HEAD@{1}
+bind main    rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
+bind reflog  rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
+bind diff    rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
+bind main    rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
+bind reflog  rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
+bind diff    rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
+bind stage   rn +sh -c '[[ "%(prompt enter "y" to hard reset HEAD: )" == "y" ]] && git reset --hard'
+bind main    rn +sh -c '[[ "%(prompt enter "y" to hard reset HEAD: )" == "y" ]] && git reset --hard'
+bind main    rp +sh -c '[[ "%(prompt enter "y" to hard reset HEAD@{1}: )" == "y" ]] && git reset HEAD@{1}'
 
 ## Cherry-pick
-### Templete: f() $cmd "$opts" $commit
-bind main   cp +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f cherry-pick -s %(commit)'
-bind refs   cp +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f cherry-pick -s %(commit)'
-bind reflog cp +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f cherry-pick -s %(commit)'
-bind diff   cp +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f cherry-pick -s %(commit)'
+bind main   cp +sh -c 'tig.cmd cmd cherry-pick -s %(commit)'
+bind refs   cp +sh -c 'tig.cmd cmd cherry-pick -s %(commit)'
+bind reflog cp +sh -c 'tig.cmd cmd cherry-pick -s %(commit)'
+bind diff   cp +sh -c 'tig.cmd cmd cherry-pick -s %(commit)'
 
-## Format patch
-bind main   fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind main   fP ?+git format-patch -k --binary --histogram -o patchset %(commit)^
-bind diff   fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind blame  fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind reflog fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind stage  fp ?@sh -c 'git diff -k --binary --histogram > ./$(date +%s.%H%M).diff'
+## Format patch {
+bind main   ps       @sh -c 'tig.cmd choose patch %(commit)'
+bind main   p<Enter> +sh -c 'tig.cmd patch.create'
+bind main   p1       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
+bind main   pn       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch %(commit)^'
+bind main   pr       @sh -c 'tig.cmd patch.reset'
+bind diff   ps       @sh -c 'tig.cmd choose patch %(commit)'
+bind diff   p<Enter> +sh -c 'tig.cmd patch.create'
+bind diff   p1       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
+bind diff   pn       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch %(commit)^'
+bind diff   pf       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch %(commit) %(file)'
+bind diff   pr       @sh -c 'tig.cmd patch.reset'
+bind reflog ps       @sh -c 'tig.cmd choose patch %(commit)'
+bind reflog p<Enter> +sh -c 'tig.cmd patch.create'
+bind reflog p1       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
+bind reflog pr       @sh -c 'tig.cmd patch.reset'
+bind blame  p1       +sh -c 'tig.cmd cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
+bind stage  p1       @sh -c 'tig.cmd cmd.out $(date +%y%m%d%H%M%S%H%M).diff diff -k --binary --histogram'
+bind stage  pf       @sh -c 'tig.cmd cmd.out $(date +%y%m%d%H%M%S)-$(basename %(file)).diff diff -k --binary --histogram %(file)'
 # }
 
 # Stage {
@@ -223,43 +248,47 @@ bind stage a stage-update-line
 bind status C none
 bind status ! none
 bind status d<Enter> @?rm -rf %(file)
-bind status dd @?sh -c 'rm -rf $(dirname %(file))'
-bind status D @?git clean -fd
+bind status dd       @?sh -c 'rm -rf $(dirname %(file))'
+bind status D        +?sh -c 'tig.cmd cmd clean -fd'
 # }
 
 # Reference {
 bind refs C none
 bind refs ! none
 
-bind refs fa       @git fetch --all
-bind refs m<ENTER> +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f merge "" %(commit)'
-bind refs rb       +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f rebase "" %(ref)'
-# only available in FF
-bind refs ps +?git fetch . HEAD:%(ref)
+bind refs f<ENTER> +sh -c 'tig.cmd cmd fetch --prune'
+bind refs m<ENTER> +sh -c 'tig.cmd cmd.rcv merge %(commit)'
+bind refs rb       +sh -c 'tig.cmd cmd.rcv rebase %(commit)'
+bind refs su       !sh -c 'tig.cmd choose push %(commit) %(refname)'
+bind refs sm       +sh -c 'tig.cmd choose merge %(commit) %(refname)'
+bind refs sr       +sh -c 'tig.cmd choose rebase %(commit) %(refname)'
+bind refs sc       +sh -c 'tig.cmd choose clean'
 # }
 
 # Main {
 bind main C none
 bind main ! none
 
-bind main bs @sh -c 'git bisect start'
-bind main bg @sh -c 'git bisect good %(commit)'
-bind main bb @sh -c 'git bisect bad %(commit)'
-bind main br @sh -c 'git bisect reset'
+bind main bs +sh -c 'tig.cmd cmd bisect start'
+bind main bg +sh -c 'tig.cmd cmd bisect good %(commit)'
+bind main bb +sh -c 'tig.cmd cmd bisect bad %(commit)'
+bind main br +sh -c 'tig.cmd cmd bisect reset'
 bind main =  :set main-options = -n 20000
-bind main fa :set main-options = '--author=%(prompt search author name: )'
 bind main fm :set main-options = '--no-merges'
-bind main rv +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f revert --no-edit %(commit)'
-bind diff rv +sh -c 'f() { if git $1 $2 $3 > /dev/null; then echo $1 "$3" done; else echo $1 "$3" failed; git $1 --abort; fi; }; f revert --no-edit %(commit)'
+bind main rv +sh -c 'tig.cmd cmd.rcv revert --no-edit %(commit)'
+bind diff rv +sh -c 'tig.cmd cmd.rcv revert --no-edit %(commit)'
 bind main rb >?git rebase -i %(commit)
 bind main ra >?git rebase --abort
 bind main rc >?git rebase --continue
-bind main D  @?git clean -fd
+bind main D  >?git clean -fd
+bind main su !sh -c 'tig.cmd choose push %(commit) %(refname)'
+bind main sm +sh -c 'tig.cmd choose merge %(commit) %(refname)'
+bind main sr +sh -c 'tig.cmd choose rebase %(commit) %(refname)'
+bind main sc +sh -c 'tig.cmd choose clean'
 # }
 
 # Log {
 bind log = :set log-options = -p
-bind log fa :set log-options = '--author=%(prompt search author name: )'
 bind log fm :set log-options = '--no-merges'
 # }
 
