tmux: increase available scope for the picker

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -151,7 +151,7 @@ set -g @plugin 'sainnhe/tmux-fzf'
 
 set -g @plugin                          'laktak/extrakto'
 set -g @extrakto_key                    "\'"
-set -g @extrakto_grab_area              recent
+set -g @extrakto_grab_area              "window full"
 set -g @extrakto_popup_size             '60%'
 set -g @extrakto_split_direction        'p'
 set -g @extrakto_fzf_unset_default_opts "false"
