--- a/doc/Makefile.template
+++ b/doc/Makefile.template
@@ -3,10 +3,12 @@ CONFIG_DIR=${XDG_CONFIG_HOME}/$(PKG_NAME)
 
 .ONESHELL:
 config.$(PKG_NAME):
-	$(H)echo "-- setup $(PKG_NAME) config --"
+	$(H)echo "-- $(PKG_NAME): setup config --"
 
 install.$(PKG_NAME):
+	$(H)echo "-- $(PKG_NAME): install package --"
 
 remove.$(PKG_NAME):
+	$(H)echo "-- $(PKG_NAME): remove package --"
 
 .PHONY: config.$(PKG_NAME) install.$(PKG_NAME) remove.$(PKG_NAME)
